# project52

./: README.md  pyproject.toml
project52/modules/computational/chen3/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  __init__.py  datatypes.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
project52/modules/computational/chen3/.hypothesis/constants/: 04fb6f1df7f0536a  0ad1b7d4357b2a69  0cae8e92743d443c  0cf3d12a13b952c6  0fb0debf88b77e61  1306efb46aaa8883  166429df347c3f20  1971696154588c59  1a1e02b5304f86f9  1b5dedfbb5ac685b  1eb750727e6aec9e  2233182ba8ec3892  2285c020900277ec  2304469a7af1b647  23b7a60fa3ad4fbe  26e65496b89f70de  2a8103fc47d7523c  31c8bf9e9fdbd011  3276c4371f76fbf1  347de943e50641e2  34e5be280b36b211  3bffbe4620ff5d75  3f6e49e42fe003c1  429519a5d8519bab  4ef673bb968fae7b  5050a155e0fe3f66  506dae9aaee97627  540be63c4dadc011  542c7d5c12b67b21  54a7d9f7b9102b6f  5ddacc5d2d2e6a5e  602cf8047306ebd6  60efc447a744ef7d  6174421ebeb5bbe7  6852260e701c9619  6a9eaeac842b9496  6c98636a8534dd35  6f2c5854ea44b96e  7208d75c8d81803a  74c36f755f4f63b0  (+38 more)
project52/modules/computational/chen3/chen3/: __init__.py  api.py  cli.py  config.py  correlation.py  datatypes.py  model.py  params.py
project52/modules/computational/chen3/chen3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project52/modules/computational/chen3/chen3/calibration/: __init__.py  loss.py  optim.py  streaming.py
project52/modules/computational/chen3/chen3/chen3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
project52/modules/computational/chen3/chen3/cli/: __init__.py  main.py
project52/modules/computational/chen3/chen3/correlation/: README.md  __init__.py  base.py  requirements.txt
project52/modules/computational/chen3/chen3/gpu_utils/: __init__.py  checkpoint_manager.py  error_handler.py  memory_manager.py  performance_monitor.py
project52/modules/computational/chen3/chen3/greeks/: __init__.py  aad.py  adjoint_cv.py  lr.py  pathwise.py
project52/modules/computational/chen3/chen3/integration/: __init__.py  api.py  cli.py  queue_manager.py
project52/modules/computational/chen3/chen3/model_enhancements/: __init__.py  jump_diffusion.py  local_volatility.py  regime_switching.py  rough_volatility.py  stochastic_dividend.py
project52/modules/computational/chen3/chen3/numerical_engines/: __init__.py  aad.py  gpu_mc_engine.py  gpu_pde_solver.py  integration.py  monte_carlo.py  multi_gpu_distributor.py  path_generator.py  quasi_mc.py  random.py  variance_reduction.py
project52/modules/computational/chen3/chen3/operations/: __init__.py  dashboard.py  serialization.py
project52/modules/computational/chen3/chen3/payoffs/: __init__.py  asian.py  barrier.py  base.py  convertible_bond.py  vanilla.py
project52/modules/computational/chen3/chen3/pricers/: __init__.py  fd.py  mc.py  pde.py
project52/modules/computational/chen3/chen3/pricing/: __init__.py  vanilla.py
project52/modules/computational/chen3/chen3/processes/: __init__.py  base.py  equity.py  interest_rate.py  rough_vol.py
project52/modules/computational/chen3/chen3/risk/: __init__.py  cva_dva.py  dependency_cache.py  exposure.py  pnl_explain.py  scenario.py  scenario_testing.py  sensitivity_cache.py
project52/modules/computational/chen3/chen3/schemes/: __init__.py  adaptive.py  adf.py  euler.py  exact.py  milstein.py  platen.py  predictor_corrector.py  runge_kutta.py
project52/modules/computational/chen3/chen3/simulators/: __init__.py  core.py  cpu_vectorized.py  gpu_vectorized.py  ray_backend.py  spark_backend.py
project52/modules/computational/chen3/chen3/tests/: test_api.py  test_cli.py  test_model.py  test_utils.py
project52/modules/computational/chen3/chen3/utils/: cache.py  config.py  exceptions.py  logging.py  logging_config.py  math.py  performance.py  rng.py  stats.py  timers.py  validation.py
project52/modules/computational/chen3/examples/: 1.py  asian_example.py  barrier_example.py  calibration_example.py  convertible_example.py  gpu_example.py  scenario_example.py  smoke_test.py
project52/modules/computational/chen3/processes/: rough_vol.py
project52/modules/computational/chen3/schemes/: __init__.py  adf.py  euler.py
project52/modules/computational/chen3/tests/: __init__.py  conftest.py  test_correlation.py  test_integration.py  test_model.py  test_numerical.py  test_parameters.py  test_properties.py  test_property_based.py
project52/modules/riskfree/: .coverage  README.md  imf_indicators.csv  pyproject.toml  pytest.ini
project52/modules/riskfree/riskfree/: __init__.py  config.py  core.py
project52/modules/riskfree/riskfree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
project52/modules/riskfree/riskfree/curve/: __init__.py  bootstrap.py  bootstrap_fast.py
project52/modules/riskfree/riskfree/data/: cache.py  sofr.py  treasury.py
project52/modules/riskfree/riskfree/model/: nelson_siegel.py
project52/modules/riskfree/riskfree/utils/: daycount.py
project52/modules/riskfree/tests/: conftest.py  test_bootstrap.py  test_core.py  test_data.py  test_nelson_siegel.py  test_usage.py
(+500 files in other folders)
