[project]
name = "riskfree"
version = "0.1.0"
description = "Market-grade Risk‑Free Rate Utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas>=1.3",
  "numpy>=1.21",
  "requests>=2.25",
  "scipy>=1.7"
]

[project.optional-dependencies]
prod = []
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "pytest-randomly>=3.0",
    "pytest-env>=1.0",
    "pytest-sugar>=0.9",
    "pytest-benchmark>=4.0",
    "pytest-profiling>=1.7",
    "pytest-clarity>=1.0",
    "pytest-html>=3.0",
    "pytest-metadata>=3.0",
    "pytest-xdist>=3.0",
    "pytest-timeout>=2.0",
    "pytest-randomly>=3.0",
    "pytest-env>=1.0",
    "pytest-sugar>=0.9",
    "pytest-benchmark>=4.0",
    "pytest-profiling>=1.7",
    "pytest-clarity>=1.0",
    "pytest-html>=3.0",
    "pytest-metadata>=3.0"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --tb=short --strict-markers --cov=riskfree --cov-report=term-missing --cov-report=html --no-cov-on-fail"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"