# -------------------- pyproject.toml --------------------
[project]
name = "chen3"
version = "0.1.0"
description = "Three-factor Chen model equity derivatives pricing and risk engine"
authors = [ { name="254Co", email="m@254carbon.com" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",  
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "pydantic>=1.10",
    "numba>=0.56; extra == 'cpu'",
    "cupy>=11; extra == 'gpu'",
    "ray>=2.5; extra == 'ray'",
    "pyspark>=3.4; extra == 'spark'",
    "scipy>=1.9"
]

[project.optional-dependencies]
cpu = ["numba>=0.56"]
gpu = ["cupy>=11"]
ray = ["ray>=2.5"]
spark = ["pyspark>=3.4"]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"