# -------------------- pyproject.toml --------------------
[project]
name = "chen3"
version = "0.1.0"
description = "Three-factor Chen model equity derivatives pricing and risk engine"
authors = [ { name="254Co", email="m@254carbon.com" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",  
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23",
    "pydantic>=1.10",
    "numba>=0.56; extra == 'cpu'",
    "cupy>=11; extra == 'gpu'",
    "ray>=2.5; extra == 'ray'",
    "pyspark>=3.4; extra == 'spark'",
    "scipy>=1.9"
]

[project.optional-dependencies]
cpu = ["numba>=0.56"]
gpu = ["cupy>=11"]
ray = ["ray>=2.5"]
spark = ["pyspark>=3.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=1.0",
]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88